src/components/RecapProgress/RecapProgress.scss
@import '../../helpers.scss';
.recap-progress {
  z-index: 100;
  position: absolute;
  padding: 0 1rem;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  width: 100%;
  box-sizing: border-box;
  max-width: 500px;
  height: 40px;

  .line-container {
    display: flex;
    justify-content: space-between;
    width: 85%;
    margin: 0 auto;
    button.line-btn {
      height: 1rem;
      background: none;
      width: 100%;
      padding: 0 0.3rem;
    }
    .line {
      width: 100%;
      height: 2px;
    }
    .line.highlighted {
      background: $secondary;
      opacity: 0.9;
    }
    .line.dimmed {
      background: $tertiary-text;
      opacity: 0.4;
    }
  }
}

.home-logo-btn {
  z-index: 100;
  position: absolute;
  display: flex;
  top: 0;
  left: 0;
  justify-content: center;
  align-items: center;
  height: 40px;
  width: 50px;
  background: none;
  .logo {
    height: 20px;
    width: 20px;
    img {
      object-fit: contain;
      height: 100%;
      width: 100%;
    }
  }
}

@media screen and (min-width: 450px) {
  $height: 50px;
  .recap-progress {
    height: $height;
  }
  .home-logo-btn {
    height: $height;
    .logo {
      height: 30px;
      width: 30px;
    }
  }
}
@media screen and (min-width: 600px) {
  $height: 55px;
  .recap-progress {
    height: $height;
  }
  .home-logo-btn {
    margin-left: 2rem;
    height: $height;
    .logo {
      height: 35px;
      width: 35px;
    }
  }
}

